--- a/categories.html
+++ b/categories.html
@@ -3,6 +3,8 @@
 <head>
     <title>Categories</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://use.fontawesome.com/db87107c26.js"></script>
     <script type="text/javascript" src="javascript/query_params.js"></script>
     <script type="text/javascript" src="javascript/categories.js"></script>
     <script type="text/javascript" src="javascript/object.js"></script>
@@ -24,14 +26,14 @@
             <i onclick="show_menu()" id="drop-down" class="fa fa-bars fa-2x" aria-hidden="true"></i>
         </div>
             <ul class="menu-list">
-                <li class="navItem"><a class="menuLink" href="./">Home</a></li>
-                <li class="navItem"><a class="menuLink" href="">Top</a></li>
-                <li class="navItem"><a class="menuLink" href="">About</a></li>
+                <li class="navItem"><a class="menuLink" href="index.html">Home</a></li>
+                <li class="navItem"><a class="menuLink" href="#">Top</a></li>
+                <li class="navItem"><a class="menuLink" href="#">About</a></li>
                 <li class="navItem"><a class="menuLink" href="categories.html">Categories</a></li>
                 <li class="right-menu-item"> 
                     <ul>
-                        <li class="navItem"><a class="menuLink" href="./">abc123</a></li>
-                        <li class="navItem"><a class="menuLink" href="./">Logout</a></li>
+                        <li class="navItem"><a class="menuLink" href="#">abc123</a></li>
+                        <li class="navItem"><a class="menuLink" href="# ">Logout</a></li>
                     </ul>
                 </li>
             </ul>     
