--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
+<!-- Skrevet av kandidat 141 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Infomedia MediaDB</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+	<!-- Css files -->
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="./css/menu.css">
 	<link rel="icon" href="./images/film.png">
 	<!-- Icon made by Chanut is Industries from www.flaticon.com -->
+
+	<!-- script files -->
 	<script src="https://use.fontawesome.com/db87107c26.js"></script>
 	<script src="./javascript/menu.js" type="text/javascript"></script>
 	<script src="./javascript/image.js" type="text/javascript"></script>
@@ -18,33 +22,37 @@
 </head>
 
 <body>
-	<header>
-		<nav class="menu">
-		<a href="index.html" id="logo-link"><img id="logo" src="./images/film.png"  alt="A logo icon of the media database showing a film roll."></a>
-
-		<div id="mobile-wrapper">
-			<form action="./search.html" id="search-wrapper">
-				<input id="search-field" type="text" name="film_title" placeholder="Search here">
-				<input type="submit" id="search-button" value="Search">
-			</form>
-			<i onclick="show_menu()" id="drop-down" class="fa fa-bars fa-2x" aria-hidden="true"></i>
-		</div>
-			<ul class="menu-list">
-				<li class="navItem"><a class="menuLink" href="">Top</a></li>
-				<li class="navItem"><a class="menuLink" href="">About</a></li>
-				<li class="navItem"><a class="menuLink" href="categories.html">Categories</a></li>
-				<li class="right-menu-item"> 
-					<ul>
-						<li class="navItem"><a class="menuLink" href="./">abc123</a></li>
-						<li class="navItem"><a class="menuLink" href="./">Logout</a></li>
-					</ul>
-				</li>
-			</ul>			
-		</nav>
-	</header>
+    <header>
+    <!-- The sites navigation -->
+    <nav class="menu">
+        <a href="index.html" id="logo-link"><img alt="logo" id="logo" src="./images/film.png"></a>
+        <div id="mobile-wrapper">
+            <form action="./search.html" id="search-wrapper">
+                <input id="search-field" type="text" name="search-field" placeholder="Search here">
+                <input type="submit" id="search-button" value="Search">
+            </form>
+            <i onclick="show_menu()" id="drop-down" class="fa fa-bars fa-2x" aria-hidden="true"></i>
+        </div>
+            <ul class="menu-list">
+                <li class="navItem"><a class="menuLink" href="index.html">Home</a></li>
+                <li class="navItem"><a class="menuLink" href="#">Top</a></li>
+                <li class="navItem"><a class="menuLink" href="#">About</a></li>
+                <li class="navItem"><a class="menuLink" href="categories.html">Categories</a></li>
+                <li class="right-menu-item"> 
+                    <ul>
+                        <li class="navItem"><a class="menuLink" href="#">abc123</a></li>
+                        <li class="navItem"><a class="menuLink" href="#">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>     
+        </nav>
+    </header>
 	<main>
-		<!-- My list element -->
-
+		<!-- My list element.
+			 This is filled with all the movies
+			 from the my_list.js file that contains
+			 an object with movie info.
+		 -->
 		<div class="movie-container">
 			<details open>
 				<summary>Min liste</summary>
@@ -52,7 +60,11 @@
 			</details>
 		</div>
 
-		<!-- Recent Loans -->
+		<!-- Recent loans element.
+			 This is filled with all the movies
+			 from the last_loans.js file that contains
+			 an object with movie info.
+		 -->
 		<div class="movie-container">
 			<details open>
 				<summary open>Siste lånte filmer</summary>
@@ -60,7 +72,11 @@
 			</details>
 		</div>
 
-		<!-- Recommendations -->
+		<!-- Recommendations element.
+			 This is filled with all the movies
+			 from the my_list.js file that contains
+			 an object with movie info.
+		 -->
 		<div class="movie-container">
 			<details open>
 				<summary open>Anbefalinger</summary>
