--- a/review.html
+++ b/review.html
@@ -4,14 +4,15 @@
 <head>
 	<title>Write review</title>
 	<meta charset="utf-8">
-	<title>Write Review</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://use.fontawesome.com/db87107c26.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/menu.css">
     <link rel="stylesheet" type="text/css" href="css/review.css">
 </head>
 <body>
     <!-- Menu and navigation. -->
-	<header>
+    <header>
     <nav class="menu">
         <a href="index.html" id="logo-link"><img alt="logo" id="logo" src="./images/film.png"></a>
         <div id="mobile-wrapper">
@@ -22,14 +23,14 @@
             <i onclick="show_menu()" id="drop-down" class="fa fa-bars fa-2x" aria-hidden="true"></i>
         </div>
             <ul class="menu-list">
-                <li class="navItem"><a class="menuLink" href="./">Home</a></li>
-                <li class="navItem"><a class="menuLink" href="">Top</a></li>
-                <li class="navItem"><a class="menuLink" href="">About</a></li>
+                <li class="navItem"><a class="menuLink" href="index.html">Home</a></li>
+                <li class="navItem"><a class="menuLink" href="#">Top</a></li>
+                <li class="navItem"><a class="menuLink" href="#">About</a></li>
                 <li class="navItem"><a class="menuLink" href="categories.html">Categories</a></li>
                 <li class="right-menu-item"> 
                     <ul>
-                        <li class="navItem"><a class="menuLink" href="./">abc123</a></li>
-                        <li class="navItem"><a class="menuLink" href="./">Logout</a></li>
+                        <li class="navItem"><a class="menuLink" href="#">abc123</a></li>
+                        <li class="navItem"><a class="menuLink" href="#">Logout</a></li>
                     </ul>
                 </li>
             </ul>     
