reviews display implementet but bug occured

--- a/show_movie.html
+++ b/show_movie.html
@@ -138,9 +138,15 @@
         </section>
 
         <!-- Summary section -->
-        <section>
+        <section id="summary_section">
           <h3>Summary</h3>
           <p id="summary"></p>  
+        </section>
+
+        <section id="comments">
+          <h3>Reviews</h3>
+          <ul id="reviews">
+          </ul>
         </section>
       </div>
   </section>
