--- a/show_movie.html
+++ b/show_movie.html
@@ -12,8 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/menu.css">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
-  <!-- ALL THE SCRIPTS !!!1! --> 
-  <script src="https://use.fontawesome.com/db87107c26.js"></script>
+  <!-- All the scripts in use. --> 
   <script src="./javascript/menu.js" type="text/javascript"></script>
   <script type="text/javascript" src="javascript/object.js"></script>
   <script type="text/javascript" src="javascript/genres.js"></script>
@@ -24,7 +23,6 @@
   <script type="text/javascript" src="javascript/ratings.js"></script>
 </head>
 
-<!-- Nice bod, send more -->
 <body>
     <header>
     <nav class="menu">
