--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- skrevet av kandidat 141, 25 0g 270 -->
+<!-- skrevet av kandidat 141, 250 og 270 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
