Corrected the name attribute of the navigation search-field

--- a/categories.html
+++ b/categories.html
@@ -21,7 +21,7 @@
         <a href="index.html" id="logo-link"><img alt="logo" id="logo" src="./images/film.png"></a>
         <div id="mobile-wrapper">
             <form action="./search.html" id="search-wrapper">
-                <input id="search-field" type="text" name="search-field" placeholder="Search here">
+                <input id="search-field" type="text" name="film_title" placeholder="Search here">
                 <input type="submit" id="search-button" value="Search">
             </form>
             <i onclick="show_menu()" id="drop-down" class="fa fa-bars fa-2x" aria-hidden="true"></i>
